--- a/package.json
+++ b/package.json
@@ -77,24 +77,16 @@
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-shopify": "^30.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.16.1",
     "husky": "^3.0.4",
     "lodash": "^4.12.0",
-    "node-sass": "^4.11.0",
     "postcss": "^7.0.7",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react": "^16.7.0",
+    "react": "^18.1.0",
     "react-addons-pure-render-mixin": "^15.0.2",
     "react-addons-shallow-compare": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^16.7.0",
-    "react-infinite": "^0.13.0",
-    "react-inspector": "^3.0.2",
-    "react-tiny-virtual-list": "^2.0.1",
-    "react-virtualized": "^9.2.2",
+    "react-dom": "^18.1.0",
     "react-window": "^1.6.2",
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.2.0",
@@ -103,7 +95,7 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-uglify": "^6.0.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.51.0",
     "standard-version": "^4.4.0",
     "style-loader": "^0.23.1"
   }
